--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -53,7 +53,7 @@ body {
 	border-radius: 0.25rem;
 	overflow-y: auto;
 	display: grid;
-	display: grid;
+	/**/
 
 
 	@media screen and (min-width: $mediaMinWidth_desktop_sm) {
