--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -132,6 +132,7 @@ body {
 
 		@media screen and (min-width: $mediaMinWidth_desktop_sm) {
 			grid-template-columns: 1fr 1fr 1fr;
+			margin-top: 2.25rem;
 		}
 	}
 
@@ -156,7 +157,6 @@ body {
 			@media screen and (min-width: $mediaMinWidth_desktop_sm) {
 				font-size: 0.5rem;
 			}
-
 		}
 	}
 }
